sumo/tests/sumo/output/e3/errors/pos_false__entry/errors.sumo
Error: Attribute 'pos' in definition of e3-detector/entry '4/1to3/1' is not a real number.
Quitting (on error).
